Revert "Merge branch 'master' into BETA_JAVA16"
This reverts commit 4a28a3e9e6e97eb0e42bf32716d56731b21959f1, reversing
changes made to 37880e206254df54740ec4b0ba10835836d6ad22.

Revert "omission - test - Bug 571141 - [16] Presence of an explicit
equals() method in a record confuses the compiler"

This reverts commit c69caa1c6446a84a1b1778350926b579ca4b96be.

Revert "Bug 571586 - [16] AST Rewrite support"

This reverts commit db365100ebf21e1b83389994ac4895d4524e3d88.

Revert "Bug 571141 - [16] Presence of an explicit equals() method in a
record confuses the compiler"

This reverts commit bbcaa456f1a25ca66e2d163e1b9ea11fde10e0e2.

Revert "Safety net for comment 5 Bug 571454 - [16] Order of compilation
units leaves canonical constructor in incomplete state"

This reverts commit 60e35c65de83ca4b419a4fb8dc7a9ebdbd0d836c.

Signed-off-by: Sravan Kumar Lakkimsetti <sravankumarl@in.ibm.com>